# ghatesting

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml  release-drafter.yml
src/: hello.py
src/ghatestmod/: hello.py
test/: test_hello.py
